# geologging

./: .gitignore  pyproject.toml
src/geologging/: _typing.py  exception.py
