[tool.poetry]
name = "geologging"
version = "0.1.0"
description = ""
authors = ["rmpIGN <remi.pas@ign.fr>"]
readme = "README.md"
packages = [{ include = "geologging", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
shapely = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
include_trailing_comma = true
line_length = 88
profile = "black"
